aguda-compiler/syntax.txt
from abc import ABC
from dataclasses import dataclass
from typing import List, Optional, Union

class ASTNode(ABC):
    pass

# TODO será util? ou apenas usar str como type?
class Type(ASTNode):
    pass

class Declaration(ASTNode):
    pass

class Exp(ASTNode):
    pass

@dataclass
class Var(Exp):
    name: str

@dataclass
class IntLiteral(Exp):
    value: int

@dataclass
class BoolLiteral(Exp):
    value: bool

@dataclass
class Unit(Exp):
    pass
# TODO Serão a mesma coisa?
@dataclass
class NullLiteral(Exp):
    pass

@dataclass
class StringLiteral(Exp):
    value: str

@dataclass
class BinaryOp(Exp):
    left: Exp
    operator: str
    right: Exp

# TODO provavelmente não é necessário
# porque unary vão ser traduzidos para binary
@dataclass
class UnaryOp(Exp):
    operator: str
    operand: Exp

@dataclass
class FunctionCall(Exp):
    name: str
    arguments: List[Exp]

# TODO array tem que ser LHS que por sua vez é um VarExp ou ArrayAccess
@dataclass
class ArrayAccess(Exp):
    array: Exp
    index: Exp

@dataclass
class Assignment(ASTNode):
    lhs: Union[Var, ArrayAccess]
    exp: Exp

# TODO provavelmente o else passará a ser Exp pois
# vai ser traduzido para Unit
# E condition será BoolExp ?
@dataclass
class Conditional(Exp):
    condition: Exp
    then_branch: Exp
    else_branch: Optional[Exp] = None

@dataclass
class WhileLoop(Exp):
    condition: Exp
    body: Exp

@dataclass
class ArrayCreation(Exp):
    type: Type
    size: Exp
    initial_value: Exp

@dataclass
class VariableDeclaration(Declaration):
    name: str
    type: Type
    value: Exp

@dataclass
class FunctionDeclaration(Declaration):
    name: str
    parameters: List[str]
    return_type: Type
    body: Exp

@dataclass
class Program(ASTNode):
    declarations: List[Declaration]
